--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,11 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render 'navbar' %>
+    <div class='container'>
+      <%= yield %>
+    </div>
+
+    <script src="https://kit.fontawesome.com/fdd7a5f15f.js" crossorigin="anonymous"></script>
   </body>
 </html>
