change: improve note#index

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,2 +1,17 @@
 @import "./actiontext.sass";
 @import "./bulma.sass";
+
+body
+  background-color: #b6b6b6
+  height: 100vh
+
+.container
+  padding: 1rem
+
+.notes
+  display: flex
+  flex-wrap: wrap
+  .card
+    flex: 1 0 21%
+    margin: 1rem
+    border-radius: 10px
