--- a/app/views/tags/_form.html.erb
+++ b/app/views/tags/_form.html.erb
@@ -12,16 +12,18 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
+    <%= form.label :name, class: 'label' %>
+    <div class="control">
+      <%= form.text_field :name, class: 'input' %>
+    </div>
   </div>
 
   <div class="field">
-    <%= form.label :description %>
-    <%= form.text_field :description %>
+    <%= form.label :description, class: 'label' %>
+    <%= form.text_area :description, class: 'textarea' %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit 'Save Tag', class: 'button is-primary' %>
   </div>
 <% end %>
