--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -1,13 +1,12 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Tags</h1>
+<% unless @tags.empty? %>
 
 <table>
   <thead>
     <tr>
       <th>Name</th>
-      <th>Description</th>
-      <th colspan="3"></th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
@@ -15,8 +14,6 @@
     <% @tags.each do |tag| %>
       <tr>
         <td><%= tag.name %></td>
-        <td><%= tag.description %></td>
-        <td><%= link_to 'Show', tag %></td>
         <td><%= link_to 'Edit', edit_tag_path(tag) %></td>
         <td><%= link_to 'Destroy', tag, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
@@ -24,6 +21,8 @@
   </tbody>
 </table>
 
-<br>
+<% else %>
+  <p>You don't have tags</p>
+<% end %>
 
-<%= link_to 'New Tag', new_tag_path %>
+<%= link_to 'New Tag', new_tag_path, class: 'button is-primary' %>
