--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,8 +1,9 @@
 @import "./actiontext.sass";
 @import "./bulma.sass";
+@import "material_icons";
 
 body
-  background-color: #b6b6b6
+  background-color: #cfcfcf
   height: 100vh
 
 .container
