--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: note, local: true) do |form| %>
+<%= simple_form_for note do |f| %>
   <% if note.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(note.errors.count, "error") %> prohibited this note from being saved:</h2>
@@ -12,20 +12,29 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :title, class: 'label' %>
+    <%= f.label :title, class: 'label' %>
     <div class="control">
-      <%= form.text_field :title, class: 'input' %>
+      <%= f.text_field :title, class: 'input' %>
     </div>
   </div>
 
   <div class="field">
-    <%= form.label :content, class: 'label' %>
+    <%= f.label :content, class: 'label' %>
     <div class="control">
-      <%= form.rich_text_area :content, class: 'textarea' %>
+      <%= f.rich_text_area :content, class: 'textarea' %>
+    </div>
+  </div>
+
+  <div class="field">
+    <%= f.label :tags, class: 'label' %>
+    <div class="control">
+      <%= f.association :tags, as: :check_boxes, label: false %>
+      <%= link_to 'Manager', tags_path %>
+      <%= link_to 'Create', new_tag_path %>
     </div>
   </div>
 
   <div class="actions">
-    <%= form.submit 'Save Note', class: 'button is-primary' %>
+    <%= f.submit 'Save Note', class: 'button is-primary' %>
   </div>
 <% end %>
