--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -15,6 +15,13 @@
           <%= note.content %>
         </div>
       </div>
+      <% unless note.tags.empty? %>
+        <footer class="card-footer">
+          <% note.tags.each do |tag| %>
+            <%= link_to tag.name, '#', class: 'card-footer-item' %>
+          <% end %>
+        </footer>
+      <% end %>
     </div>
   <% end %>
   </div>
