--- a/app/views/tags/_navbar.html.erb
+++ b/app/views/tags/_navbar.html.erb
@@ -1,8 +1,6 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <a class="navbar-item" href="#">
-      <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
-    </a>
+    <%= link_to 'Notepad', notes_path, class: 'navbar-item'%>
 
     <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
       <span aria-hidden="true"></span>
@@ -13,8 +11,6 @@
 
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
-      <%= link_to 'Notes', notes_path, class: 'navbar-item'%>
-
       <%= link_to 'Tags', tags_path, class: 'navbar-item'%>
     </div>
 
