add: tag > hex_color

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,6 +1,7 @@
 @import "./actiontext.sass";
 @import "./bulma.sass";
-@import "material_icons";
+// @import "material_icons";
+@import "simple_form_extension";
 
 body
   background-color: #cfcfcf
