change: move 'new' button'

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -1,7 +1,5 @@
 @import "./actiontext.sass";
 @import "./bulma.sass";
-// @import "material_icons";
-@import "simple_form_extension";
 
 body
   background-color: #cfcfcf
@@ -17,3 +15,10 @@ body
     flex: 1 0 21%
     margin: 0.5rem
     border-radius: 10px
+
+.current
+  font-weight: 600
+
+.card
+  @media (min-width: 800px)
+    max-width: 30%
