--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -29,8 +29,8 @@
     <%= f.label :tags, class: 'label' %>
     <div class="control">
       <%= f.association :tags, as: :check_boxes, label: false %>
-      <%= link_to 'Manager', tags_path %>
-      <%= link_to 'Create', new_tag_path %>
+      <%= link_to 'Manager', tags_path, class: 'button is-small' %>
+      <%= link_to 'Create', new_tag_path, class: 'button is-small' %>
     </div>
   </div>
 
