--- a/app/views/notes/_navbar.html.erb
+++ b/app/views/notes/_navbar.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <%= link_to 'Notepad', notes_path, class: 'navbar-item'%>
+    <%= link_to 'Notepad', notes_path, class: 'navbar-item current'%>
 
     <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
       <span aria-hidden="true"></span>
@@ -39,6 +39,11 @@
               <i class="fas fa-search"></i>
             </span>
           </p>
+        </div>
+      </div>
+      <div class="navbar-item">
+        <div class="buttons">
+          <%= link_to 'New Note', new_note_path, class: 'button is-primary' %>
         </div>
       </div>
     </div>
