--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -20,14 +20,14 @@
 
   <div class="field">
     <%= f.label :content, class: 'label' %>
-    <div class="control">
+    <div class="control box">
       <%= f.rich_text_area :content, class: 'textarea' %>
     </div>
   </div>
 
   <div class="field">
     <%= f.label :tags, class: 'label' %>
-    <div class="control">
+    <div class="box">
       <%= f.association :tags, as: :check_boxes, label: false %>
       <%= link_to 'Manager', tags_path, class: 'button is-small' %>
       <%= link_to 'Create', new_tag_path, class: 'button is-small' %>
