add: modal javascript

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,8 @@
     <div class='container'>
       <%= yield %>
     </div>
-
+    <div id="card-modal" class="modal">
+    </div>
     <script src="https://kit.fontawesome.com/fdd7a5f15f.js" crossorigin="anonymous"></script>
   </body>
 </html>
