--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -29,3 +29,5 @@
 <% else %>
   <p>You don't have notes</p>
 <% end %>
+
+<button class="button is-primary" onClick={openModal('notes/1/edit')}>Launch card modal</button>
