--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -31,3 +31,4 @@
 <% end %>
 
 <button class="button is-primary" onClick={openModal('notes/1/edit')}>Launch card modal</button>
+<button class="button is-primary" onClick={closeModal()}>Close card modal</button>
