--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -2,6 +2,7 @@
 @import "./actiontext.sass";
 @import "./bulma.sass";
 @import "material_icons";
+@import "./animate.css";
 
 body
   background-color: #cfcfcf
@@ -24,3 +25,6 @@ body
 .card
   @media (min-width: 800px)
     max-width: 30%
+
+.modal-card
+  width: 750px
