--- a/app/views/notes/edit.html.erb
+++ b/app/views/notes/edit.html.erb
@@ -1,6 +1,48 @@
-<h1>Editing Note</h1>
+<div class='modal is-active'>
+  <div class='modal-background'></div>
+  <div class='modal-card animated zoomIn faster'>
+    <header class='modal-card-head'>
+      <p class='modal-card-title'>Editer</p>
+      <button class='delete' aria-label='close' onclick={closeModal()}></button>
+    </header>
+    <section class='modal-card-body'>
 
-<%= render 'form', note: @note %>
+    <%= simple_form_for @note, remote: true, url: note_path do |f| %>
+      <% if @note.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@note.errors.count, "error") %> prohibited this note from being saved:</h2>
 
-<%= link_to 'Show', @note %> |
-<%= link_to 'Back', notes_path %>
+          <ul>
+            <% @note.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
+
+      <div class="field">
+        <div class="control">
+          <%= f.text_field :title, class: 'input' %>
+        </div>
+      </div>
+
+      <div class="field">
+        <div class="control">
+          <%= f.rich_text_area :content, class: 'textarea' %>
+        </div>
+      </div>
+
+      <div class="field">
+        <%= f.label :tags, class: 'label' %>
+        <%= f.association :tags, as: :check_boxes, label: false %>
+      </div>
+    </section>
+
+    <footer class='modal-card-foot'>
+      <div class="actions">
+        <%= f.submit 'Save', class: 'button is-success' %>
+      </div>
+    <footer>
+    <% end %>
+  </div>
+</div>
