--- a/app/views/notes/_navbar.html.erb
+++ b/app/views/notes/_navbar.html.erb
@@ -43,7 +43,7 @@
       </div>
       <div class="navbar-item">
         <div class="buttons">
-          <%= link_to 'New Note', new_note_path, class: 'button is-primary' %>
+          <button class="button is-primary" onClick={openModal('<%= new_note_path %>')}>🖍</button>
         </div>
       </div>
     </div>
