--- a/app/views/tags/_form.html.erb
+++ b/app/views/tags/_form.html.erb
@@ -24,6 +24,6 @@
   </div>
 
   <div class="actions">
-    <%= f.submit 'Save Tag', class: 'button is-primary' %>
+    <%= f.submit 'Save', class: 'button is-primary' %>
   </div>
 <% end %>
